--- a/media/scss/fonts.scss
+++ b/media/scss/fonts.scss
@@ -16,3 +16,15 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Helvetica Condensed Bold';
+  //src: url('fonts/HelveticaLTStd-BoldCond.eot');
+  //src: local('☺'), url('fonts/HelveticaLTStd-BoldCond.woff') format('woff'), url('fonts/HelveticaLTStd-BoldCond.ttf') format('truetype'), url('fonts/HelveticaLTStd-BoldCond.svg') format('svg');
+  //font-weight: normal;
+  //font-style: normal;
+  src: url('../fonts/HelveticaLTStd-BoldCond.eot');
+  src: url('../fonts/HelveticaLTStd-BoldCond.eot?#iefix') format('embedded-opentype'), url('../fonts/HelveticaLTStd-BoldCond.woff') format('woff'), url('../fonts/HelveticaLTStd-BoldCond.ttf') format('truetype'), url('../fonts/HelveticaLTStd-BoldCond.svg') format('svg');
+  font-weight: bold;
+  font-style: normal;
+}
+
