--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -132,15 +132,112 @@ ul.pageNav {
 
 }
 
-$tags: (vip, mod, admin, dev, super, owner);
-@each $tag in $tags {
-  .tag-#{$tag}:before {
-    content: url('../images/tags/#{$tag}.png') ' ';
-    display: inline-block;
-    white-space: pre;
-    vertical-align: middle;
-    height: 16px;
-    // todo add background images instead of content text
+//$tags: (vip, mod, admin, dev, super, owner);
+//@each $tag in $tags {
+//  .tag-#{$tag}:before {
+//    content: url('../images/tags/#{$tag}.png') ' ';
+//    display: inline-block;
+//    white-space: pre;
+//    vertical-align: middle;
+//    height: 16px;
+//    // todo add background images instead of content text
+//  }
+//}
+
+.tag-vip, .tag-mod, .tag-admin, .tag-dev, .tag-super, .tag-owner {
+  //&, &:before {
+  //  display: inline-block;
+  //  color: #fff;
+  //  font-family: 'Arvil Sans';
+  //  padding: 0 0.5em;
+  //  letter-spacing: 1px;
+  //  font-size: 1.25em;
+  //  text-shadow:0px 0px 3px #000, 0px 0px 3px #000 ;
+  //  //border:1px solid #000;
+  //  //@include border-radius(0.25em);
+  //}
+  //
+  //&:hover {
+  //  color: inherit;
+  //}
+}
+
+$reg: #e8e8e8;
+$vip: #ffe762;
+$mod: #bdf04f;
+$admin: #ff6262;
+$dev: #7ad8ff;
+$super: #ba83ff;
+$owner: #5e5e5e;
+
+.tag-reg, .tag-vip, .tag-mod, .tag-admin, .tag-dev, .tag-super, .tag-owner {
+  color: #fff !important;
+  text-shadow: 0 0 3px #000, 0 0 3px #000, 0 0 3px #000;
+  padding: 0.25em 0.5em;
+  font-size: 1em;
+  text-shadow: 1px 1px 2px rgba(#000, 0.6);
+  //font-weight: bold;
+  font-family: 'Helvetica Condensed Bold';
+
+  &:hover {
+    text-decoration: none;
+    outline: 2px solid darken($reg, 30%);
+  }
+}
+
+.tag-reg {
+  background: $reg;
+  text-shadow: 1px 1px 2px #000, 0 0 2px #000;
+}
+
+.tag-vip {
+  background: $vip;
+
+  &:hover {
+    outline: 2px solid darken($vip, 30%);
+  }
+}
+
+.tag-mod {
+  background: $mod;
+  &:hover {
+    outline: 2px solid darken($mod, 30%);
+  }
+}
+
+.tag-admin {
+  background: $admin;
+  &:hover {
+    outline: 2px solid darken($admin, 30%);
+  }
+}
+
+.tag-dev {
+  background: $dev;
+  &:hover {
+    outline: 2px solid darken($dev, 30%);
+  }
+}
+
+.tag-super {
+  background: $super;
+  &:hover {
+    outline: 2px solid darken($super, 30%);
+  }
+}
+
+.tag-owner {
+  background: $owner;
+  &:hover {
+    outline: 2px solid darken($owner, 30%);
+  }
+}
+
+.rankTag {
+  padding: 0 0.5em;
+
+  &:hover {
+    outline: 0;
   }
 }
 
@@ -174,7 +271,7 @@ $tags: (vip, mod, admin, dev, super, owner);
 
 #chatbox {
   .chats {
-    font-size: 0.75em;
+    font-size: 0.8em;
     border: 1px solid #d8d8d8;
     border-bottom: none;
     @include border-radius(0.5em 0.5em 0 0);
@@ -186,17 +283,25 @@ $tags: (vip, mod, admin, dev, super, owner);
   }
 
   .chat {
-    a.userLink {
-      height: 15px;
-      display: inline-block;
 
-      &:before {
-        line-height: 1.0;
-        vertical-align: bottom;
-        max-height: 15px;
-        height: 15px;
-        display: none;
-      }
+    & ~ .chat {
+      margin-top: 0.25em;
+    }
+
+    a.userLink {
+      //height: 15px;
+      display: inline-block;
+      font-family: Helvetica, serif;
+      font-weight: bold;
+      font-size: 0.8em;
+
+      //&:before {
+      //  line-height: 1.0;
+      //  vertical-align: bottom;
+      //  max-height: 15px;
+      //  height: 15px;
+      //  display: none;
+      //}
     }
   }
 
