--- a/media/css/servers.css
+++ b/media/css/servers.css
@@ -43,7 +43,7 @@
 }
 /* line 41, ../scss/servers.scss */
 .server .percent .playerPercent {
-  background: url(../images/noisegreen.png) repeat left center #a6d95d;
+  background: url(../images/noisegreen.png) repeat left center #bdf04f;
   display: inline-block;
   height: 4px;
   margin: 0;
