--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -56,7 +56,7 @@ a {
   border: 1px solid $borderGray;
   padding: $contentPadding;
   //@include box-shadow(0 0 1em rgba(0,0,0,0.125));
-  @include border-radius(0.25em);
+  //@include border-radius(0.25em);
   @include box-shadow(rgba(#000, 0.1) 0 0 0.25em);
   position: relative;
 }
@@ -562,7 +562,7 @@ input[type="submit"], button {
 .form-labels {
   width: 320px;
   float: left;
-  margin: 20px;
+  margin: 20px 0;
 
   & > div {
     position: relative;
@@ -591,7 +591,7 @@ input[type="submit"], button {
         @include noise(GreyDark);
         color: white;
         font-size: 70%;
-        padding: 1px 6px;
+        padding: 1px 8px;
         z-index: 2;
         text-transform: uppercase;
         top: 100%;
