--- a/media/scss/footer.scss
+++ b/media/scss/footer.scss
@@ -36,7 +36,7 @@ ul.bottomNav {
       line-height: $liHeight;
 
       &:hover {
-        @include noise(Black);
+        @include noise("Black");
       }
     }
 
