--- a/media/scss/threads.scss
+++ b/media/scss/threads.scss
@@ -41,7 +41,7 @@ h2.threadTitle {
   }
 
   &.myPost {
-    @include noiseBorder(Blue, 0, 0, 0, 5);
+    @include noiseBorder("Blue", 0, 0, 0, 5);
   }
 
   padding: 36px 0 16px 0;
@@ -120,7 +120,7 @@ h2.threadTitle {
     }
 
     &:active {
-      @include noise(Blue);
+      @include noise("Blue");
     }
   }
 }
