--- a/media/scss/threads.scss
+++ b/media/scss/threads.scss
@@ -194,14 +194,16 @@ h2.threadTitle {
   padding: 0;
   vertical-align: top;
   margin: 0 0 1em 0;
-  overflow-x: auto;
+  //overflow-x: auto;
   font-family: Helvetica;
   color: #333;
   text-align: justify;
 
-  &.expanded {
-    overflow-x: initial;
-  }
+  //&.expanded {
+  //  overflow-x: initial;
+  //}
+
+  @include force-wrap;
 
   blockquote {
     padding: 7px 23px;
