--- a/media/css/header.css
+++ b/media/css/header.css
@@ -29,13 +29,21 @@ h1 {
   height: 120px;
 }
 /* line 22, ../scss/header.scss */
+h1 a {
+  text-decoration: none;
+}
+/* line 25, ../scss/header.scss */
+h1 a:hover {
+  text-decoration: none;
+}
+/* line 30, ../scss/header.scss */
 h1 strong {
   font-size: 1.5em;
   font-weight: normal;
   color: #25bfff;
   letter-spacing: 8px;
 }
-/* line 29, ../scss/header.scss */
+/* line 37, ../scss/header.scss */
 h1 span {
   line-height: 1;
   font-size: 0.75em;
@@ -46,7 +54,7 @@ h1 span {
   text-align: center;
   display: block;
 }
-/* line 48, ../scss/header.scss */
+/* line 56, ../scss/header.scss */
 h1 span:before {
   content: '\a';
   display: block;
@@ -55,7 +63,7 @@ h1 span:before {
   font-size: 1px;
 }
 
-/* line 58, ../scss/header.scss */
+/* line 66, ../scss/header.scss */
 ul.topNav {
   font-family: 'Arvil Sans', Arial;
   font-size: 1.5em;
@@ -75,11 +83,11 @@ ul.topNav {
   float: right;
   position: relative;
 }
-/* line 74, ../scss/header.scss */
+/* line 82, ../scss/header.scss */
 ul.topNav li {
   display: inline-block;
 }
-/* line 78, ../scss/header.scss */
+/* line 86, ../scss/header.scss */
 ul.topNav li a {
   display: inline-block;
   padding: 0 1em;
@@ -87,19 +95,19 @@ ul.topNav li a {
   text-decoration: none;
   line-height: 46px;
 }
-/* line 86, ../scss/header.scss */
+/* line 94, ../scss/header.scss */
 ul.topNav li a:hover {
   background: url(../images/noiseGreyMedium.png) repeat left center #f3f3f3;
   color: #222;
   position: relative;
 }
-/* line 128, ../scss/header.scss */
+/* line 136, ../scss/header.scss */
 ul.topNav li.selected a {
   background: url(../images/noiseBlue.png) repeat left center;
   color: #fff;
   position: relative;
 }
-/* line 133, ../scss/header.scss */
+/* line 141, ../scss/header.scss */
 ul.topNav li.selected a:after {
   content: '';
   width: 0px;
@@ -111,7 +119,7 @@ ul.topNav li.selected a:after {
   top: 0;
   right: 0;
 }
-/* line 147, ../scss/header.scss */
+/* line 155, ../scss/header.scss */
 ul.topNav:after {
   content: '';
   height: 5px;
@@ -129,7 +137,7 @@ ul.topNav:after {
   bottom: -8px;
   display: block;
 }
-/* line 160, ../scss/header.scss */
+/* line 168, ../scss/header.scss */
 ul.topNav:before {
   content: '';
   height: 3px;
@@ -141,7 +149,7 @@ ul.topNav:before {
   display: inline-block;
 }
 
-/* line 232, ../scss/header.scss */
+/* line 240, ../scss/header.scss */
 ul.welcome {
   float: right;
   display: inline-block;
@@ -150,32 +158,32 @@ ul.welcome {
   font-size: 0.85em;
   line-height: 1.76471;
 }
-/* line 240, ../scss/header.scss */
+/* line 248, ../scss/header.scss */
 ul.welcome li {
   display: inline-block;
 }
-/* line 243, ../scss/header.scss */
+/* line 251, ../scss/header.scss */
 ul.welcome li a {
   color: #545d63;
   margin: 0 0.25em;
   font-weight: bold;
 }
-/* line 250, ../scss/header.scss */
+/* line 258, ../scss/header.scss */
 ul.welcome li + li ~ li:before {
   content: ' | ';
 }
-/* line 254, ../scss/header.scss */
+/* line 262, ../scss/header.scss */
 ul.welcome li:first-child {
   margin-right: 1.5em;
 }
-/* line 258, ../scss/header.scss */
+/* line 266, ../scss/header.scss */
 ul.welcome .avatar {
   vertical-align: middle;
   height: 16px;
   width: 16px;
   margin-right: 4px;
 }
-/* line 266, ../scss/header.scss */
+/* line 274, ../scss/header.scss */
 ul.welcome input[type="submit"]:focus {
   border-width: none;
 }
