--- a/media/css/main.css
+++ b/media/css/main.css
@@ -242,26 +242,30 @@ ul.pageNav li.curPage span {
 .rankTag:hover {
   outline: 0;
 }
+/* line 243, ../scss/main.scss */
+.rankTag.shortName {
+  text-transform: uppercase;
+}
 
-/* line 244, ../scss/main.scss */
+/* line 248, ../scss/main.scss */
 .breadcrumbs {
   margin: 0;
   padding: 0;
   display: inline-block;
   float: left;
 }
-/* line 250, ../scss/main.scss */
+/* line 254, ../scss/main.scss */
 .breadcrumbs li {
   display: inline-block;
   list-style: none;
   padding: 0 1em 0 0;
 }
-/* line 255, ../scss/main.scss */
+/* line 259, ../scss/main.scss */
 .breadcrumbs li a {
   color: #25bfff;
   display: inline-block;
 }
-/* line 259, ../scss/main.scss */
+/* line 263, ../scss/main.scss */
 .breadcrumbs li ~ li:before {
   content: '>';
   color: #555;
@@ -273,7 +277,7 @@ ul.pageNav li.curPage span {
   vertical-align: middle;
 }
 
-/* line 273, ../scss/main.scss */
+/* line 277, ../scss/main.scss */
 #chatbox .chats {
   font-size: 0.8em;
   border: 1px solid #d8d8d8;
@@ -289,26 +293,26 @@ ul.pageNav li.curPage span {
   overflow-x: hidden;
   background: url(../images/noiseWhite.png) repeat left center;
 }
-/* line 287, ../scss/main.scss */
+/* line 291, ../scss/main.scss */
 #chatbox .chat ~ .chat {
   margin-top: 0.25em;
 }
-/* line 291, ../scss/main.scss */
+/* line 295, ../scss/main.scss */
 #chatbox .chat a.userLink {
   display: inline-block;
   font-family: Helvetica, serif;
   font-weight: bold;
   font-size: 0.8em;
 }
-/* line 308, ../scss/main.scss */
+/* line 312, ../scss/main.scss */
 #chatbox .chat-date {
   font-style: italic;
 }
-/* line 312, ../scss/main.scss */
+/* line 316, ../scss/main.scss */
 #chatbox .chat ~ .chat-date {
   margin-top: 1em;
 }
-/* line 316, ../scss/main.scss */
+/* line 320, ../scss/main.scss */
 #chatbox input {
   width: 100%;
   border: 1px solid #d8d8d8;
@@ -323,7 +327,7 @@ ul.pageNav li.curPage span {
   border-radius: 0 0 0.5em 0.5em;
 }
 
-/* line 326, ../scss/main.scss */
+/* line 330, ../scss/main.scss */
 .dimensions {
   position: absolute;
   display: inline-block;
@@ -333,22 +337,22 @@ ul.pageNav li.curPage span {
   padding: 0.5em;
   font-size: 0.8em;
 }
-/* line 335, ../scss/main.scss */
+/* line 339, ../scss/main.scss */
 .dimensions:hover {
   color: #fff;
 }
 
-/* line 340, ../scss/main.scss */
+/* line 344, ../scss/main.scss */
 .tinyImage {
   border: 2px solid #a54;
   cursor: pointer;
 }
-/* line 344, ../scss/main.scss */
+/* line 348, ../scss/main.scss */
 .tinyImage.expanded {
   max-width: none;
 }
 
-/* line 349, ../scss/main.scss */
+/* line 353, ../scss/main.scss */
 .missing42 {
   width: 42px;
   height: 42px;
@@ -356,7 +360,7 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==") no-repeat;
 }
 
-/* line 356, ../scss/main.scss */
+/* line 360, ../scss/main.scss */
 .missing52 {
   width: 42px;
   height: 42px;
@@ -364,22 +368,22 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0AQMAAAD/tomoAAAABlBMVEX4APgAAAAfdBzzAAAAKUlEQVR4Xt3PQQkAAAjAwIEBjGR1IxlAUEvoQxjce6DlUrHmZAlXfvtpTQiymQ2xdWAAAAAASUVORK5CYII=") no-repeat;
 }
 
-/* line 365, ../scss/main.scss */
+/* line 369, ../scss/main.scss */
 .modButton.active {
   background: url(../images/noiseBlue.png) repeat left center;
   z-index: 1000;
 }
 
-/* line 372, ../scss/main.scss */
+/* line 376, ../scss/main.scss */
 .modDropdown {
   display: inline-block;
   position: relative;
 }
-/* line 376, ../scss/main.scss */
+/* line 380, ../scss/main.scss */
 .modDropdown:hover {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
 }
-/* line 397, ../scss/main.scss */
+/* line 401, ../scss/main.scss */
 .modDropdown ul {
   display: none;
   position: absolute;
@@ -392,7 +396,7 @@ ul.pageNav li.curPage span {
   text-align: left;
   background: #222;
 }
-/* line 411, ../scss/main.scss */
+/* line 415, ../scss/main.scss */
 .modDropdown ul li a {
   color: #fff;
   display: block;
@@ -401,12 +405,12 @@ ul.pageNav li.curPage span {
   background: url(../images/noiseBlack.png) repeat left center;
   line-height: 32px;
 }
-/* line 419, ../scss/main.scss */
+/* line 423, ../scss/main.scss */
 .modDropdown ul li a:hover {
   background: url(../images/noiseBlue.png) repeat left center;
   text-decoration: none;
 }
-/* line 425, ../scss/main.scss */
+/* line 429, ../scss/main.scss */
 .modDropdown ul li.userActions {
   padding: 0 16px;
   line-height: 32px;
@@ -414,19 +418,19 @@ ul.pageNav li.curPage span {
   font-weight: bold;
   white-space: nowrap;
 }
-/* line 435, ../scss/main.scss */
+/* line 439, ../scss/main.scss */
 .modDropdown ul.mod-thread a {
   padding: 0 0.5em 0 0;
 }
 
 @-moz-keyframes spin {
-  /* line 444, ../scss/main.scss */
+  /* line 448, ../scss/main.scss */
   from {
     -moz-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 447, ../scss/main.scss */
+  /* line 451, ../scss/main.scss */
   to {
     -moz-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -434,13 +438,13 @@ ul.pageNav li.curPage span {
 }
 
 @-webkit-keyframes spin {
-  /* line 444, ../scss/main.scss */
+  /* line 448, ../scss/main.scss */
   from {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 447, ../scss/main.scss */
+  /* line 451, ../scss/main.scss */
   to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -448,13 +452,13 @@ ul.pageNav li.curPage span {
 }
 
 @-o-keyframes spin {
-  /* line 444, ../scss/main.scss */
+  /* line 448, ../scss/main.scss */
   from {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 447, ../scss/main.scss */
+  /* line 451, ../scss/main.scss */
   to {
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -462,13 +466,13 @@ ul.pageNav li.curPage span {
 }
 
 @-ms-keyframes spin {
-  /* line 444, ../scss/main.scss */
+  /* line 448, ../scss/main.scss */
   from {
     -ms-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 447, ../scss/main.scss */
+  /* line 451, ../scss/main.scss */
   to {
     -ms-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -476,18 +480,18 @@ ul.pageNav li.curPage span {
 }
 
 @keyframes spin {
-  /* line 444, ../scss/main.scss */
+  /* line 448, ../scss/main.scss */
   from {
     transform: rotate(0deg);
   }
 
-  /* line 447, ../scss/main.scss */
+  /* line 451, ../scss/main.scss */
   to {
     transform: rotate(360deg);
   }
 }
 
-/* line 452, ../scss/main.scss */
+/* line 456, ../scss/main.scss */
 .popupContainer {
   text-align: center;
   position: fixed;
@@ -500,7 +504,7 @@ ul.pageNav li.curPage span {
   z-index: 9998;
 }
 
-/* line 464, ../scss/main.scss */
+/* line 468, ../scss/main.scss */
 .popup {
   padding: 1em;
   width: 80%;
@@ -512,34 +516,34 @@ ul.pageNav li.curPage span {
   background: #eee;
 }
 
-/* line 475, ../scss/main.scss */
+/* line 479, ../scss/main.scss */
 .popupCloseLink {
   font-size: 0.75em;
 }
-/* line 478, ../scss/main.scss */
+/* line 482, ../scss/main.scss */
 .popupCloseLink:before {
   margin-top: 2em;
   content: '\a';
   display: block;
 }
 
-/* line 485, ../scss/main.scss */
+/* line 489, ../scss/main.scss */
 table {
   width: 100%;
 }
 
-/* line 493, ../scss/main.scss */
+/* line 497, ../scss/main.scss */
 a[target="_blank"]:after {
   content: " " url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAD1BMVEX///////////////////+Rd1MVAAAABHRSTlMAaeRqY+AomwAAADNJREFUeF4lxIEJACAMBLErdACRjuIAX/n9Z7IghEDYhlwkcGe7Z+Xac4cLnVKjkOCzLR6tNQaTLNDT1wAAAABJRU5ErkJggg==");
   white-space: pre;
 }
 
-/* line 499, ../scss/main.scss */
+/* line 503, ../scss/main.scss */
 a.sprite[target="_blank"]:after {
   display: none;
 }
 
-/* line 503, ../scss/main.scss */
+/* line 507, ../scss/main.scss */
 .login {
   width: 154px;
   height: 23px;
@@ -550,7 +554,7 @@ a.sprite[target="_blank"]:after {
   color: transparent;
 }
 
-/* line 513, ../scss/main.scss */
+/* line 517, ../scss/main.scss */
 .curse {
   font-weight: bold;
   -webkit-filter: blur(1px);
@@ -560,7 +564,7 @@ a.sprite[target="_blank"]:after {
   text-shadow: 0 0 0.25em #ccc, 0 0 0.5em #ccc;
 }
 
-/* line 520, ../scss/main.scss */
+/* line 524, ../scss/main.scss */
 input {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -573,7 +577,7 @@ input {
   border-width: 2px 0px 0px 1px;
 }
 
-/* line 525, ../scss/main.scss */
+/* line 529, ../scss/main.scss */
 textarea {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -586,7 +590,7 @@ textarea {
   border-width: 3px 0px 0px 2px;
 }
 
-/* line 530, ../scss/main.scss */
+/* line 534, ../scss/main.scss */
 input[type="submit"], button {
   padding: 0.5em 1em;
   border-style: solid;
@@ -601,7 +605,7 @@ input[type="submit"], button {
   margin: 0 0 2px 0;
   vertical-align: top;
 }
-/* line 537, ../scss/main.scss */
+/* line 541, ../scss/main.scss */
 input[type="submit"]:focus, button:focus {
   border-style: solid;
   border-color: #e0e0e0;
@@ -614,29 +618,29 @@ input[type="submit"]:focus, button:focus {
   margin: 2px 0 0 0;
 }
 
-/* line 543, ../scss/main.scss */
+/* line 547, ../scss/main.scss */
 .admin-form {
   display: block;
   clear: both;
 }
-/* line 547, ../scss/main.scss */
+/* line 551, ../scss/main.scss */
 .admin-form input {
   display: block;
 }
 
-/* line 562, ../scss/main.scss */
+/* line 566, ../scss/main.scss */
 .form-labels {
   width: 320px;
   float: left;
   margin: 20px 0;
 }
-/* line 567, ../scss/main.scss */
+/* line 571, ../scss/main.scss */
 .form-labels > div {
   position: relative;
   overflow: hidden;
   margin: 1em 0;
 }
-/* line 574, ../scss/main.scss */
+/* line 578, ../scss/main.scss */
 .form-labels .labels input, .form-labels .labels textarea {
   width: 100%;
   border-style: solid;
@@ -655,7 +659,7 @@ input[type="submit"]:focus, button:focus {
   padding: 12px;
   outline: 0;
 }
-/* line 585, ../scss/main.scss */
+/* line 589, ../scss/main.scss */
 .form-labels .labels input:focus, .form-labels .labels input:valid, .form-labels .labels textarea:focus, .form-labels .labels textarea:valid {
   border-style: solid;
   border-color: #e0e0e0;
@@ -667,7 +671,7 @@ input[type="submit"]:focus, button:focus {
   border-width: 2px 2px 2px 2px;
   padding: 4px 6px 20px 6px;
 }
-/* line 590, ../scss/main.scss */
+/* line 594, ../scss/main.scss */
 .form-labels .labels input:focus + label, .form-labels .labels input:valid + label, .form-labels .labels textarea:focus + label, .form-labels .labels textarea:valid + label {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
   color: white;
@@ -678,7 +682,7 @@ input[type="submit"]:focus, button:focus {
   top: 100%;
   margin-top: -16px;
 }
-/* line 601, ../scss/main.scss */
+/* line 605, ../scss/main.scss */
 .form-labels .labels input:focus, .form-labels .labels textarea:focus {
   border-style: solid;
   -moz-border-image: url(../images/noiseBlue.png) 2 2 2 2 repeat repeat;
@@ -688,11 +692,11 @@ input[type="submit"]:focus, button:focus {
   border-image: url(../images/noiseBlue.png) 2 2 2 2 repeat repeat;
   border-width: 2px 2px 2px 2px;
 }
-/* line 605, ../scss/main.scss */
+/* line 609, ../scss/main.scss */
 .form-labels .labels input:focus + label, .form-labels .labels textarea:focus + label {
   background: url(../images/noiseBlue.png) repeat left center;
 }
-/* line 610, ../scss/main.scss */
+/* line 614, ../scss/main.scss */
 .form-labels .labels label {
   transition: background 0.2s, color 0.2s, top 0.2s, bottom 0.2s, right 0.2s, left 0.2s;
   position: absolute;
@@ -704,7 +708,7 @@ input[type="submit"]:focus, button:focus {
   left: 0;
   width: 100%;
 }
-/* line 621, ../scss/main.scss */
+/* line 625, ../scss/main.scss */
 .form-labels .labels textarea {
   display: block;
   resize: vertical;
