--- a/media/scss/forums.scss
+++ b/media/scss/forums.scss
@@ -355,7 +355,8 @@ table.threads {
   }
 
   .userLink {
-    margin-right: 1em;
+    display: inline-block;
+    margin: 0 0.5em 0.5em 0;
   }
 
 }
