-fixed up user profiles -changed green back to old green

--- a/media/scss/_custom.scss
+++ b/media/scss/_custom.scss
@@ -37,7 +37,7 @@ $graey: #aaa;
     @return #5b8ec8;
   }
   @if $color == Green {
-    @return #bdf04f;
+    @return #a6d95d;
   }
   @if $color == Grey {
     @return #e9e9e9;
