--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -41,22 +41,22 @@ a {
   @include noise("Green");
 
   color: #fff;
-  font-weight: bold;
+  //font-weight: bold;
   //text-shadow: 1px 1px 0.25em rgba(#000, 0.75);
-  text-shadow: 1px 1px 0.25em rgba(#000, 0.5);
-  position: relative;
-  padding-left: 40px;
+  //text-shadow: 1px 1px 0.25em rgba(#000, 0.5);
+  //position: relative;
+  //padding-left: 40px;
 
   &:before {
     @include noise(Notice, no-repeat);
     content: '';
     display: inline-block;
-    width: 28px;
-    height: 26px;
+    width: 26px;
+    height: 17px;
     vertical-align: text-bottom;
-    position: absolute;
-    left: 9px;
-    top: 11px;
+    //position: absolute;
+    //left: 9px;
+    //top: 11px;
   }
 
   a {
